--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,20 @@ services:
       - DB_PORT=5432
     depends_on:
       - db
+
+  fastapi:
+    build: .
+    container_name: fastapi
+    command: uvicorn api.main:app --host 0.0.0.0 --port 8001
+    ports:
+      - 8001:8001
+    volumes:
+      - .:/app/src/
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/lmsdb
+    depends_on:
+      - db
+    
   
   celery:
     build: .
