--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ asgiref==3.8.1
 bcrypt==4.3.0
 billiard==4.2.1
 celery==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
@@ -15,6 +17,8 @@ djangorestframework_simplejwt==5.5.0
 drf-yasg==1.21.10
 fastapi==0.115.12
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 inflection==0.5.1
 kombu==5.5.3
@@ -27,10 +31,12 @@ pydantic==2.11.3
 pydantic_core==2.33.1
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
 redis==5.2.1
+requests==2.32.3
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.40
@@ -40,6 +46,7 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
 uritemplate==4.1.1
+urllib3==2.4.0
 uvicorn==0.34.2
 vine==5.1.0
 wcwidth==0.2.13
